@@ -24,6 +24,8 @@ F77_LD=f95
 # This may have to be installed from:
 # http://www.unidata.ucar.edu/packages/netcdf/index.html
 #
+# set BLASLIB to library providing BLAS, GLIMMER will use built-in  blas if not set
+#BLASLIB=
 NETCDF_LIB=-lnetcdf
 NETCDF_PREFIX=$(GNU)
 #
@@ -34,13 +36,13 @@ CCFLAGS= -DIFC -g -DLINUX
 # compilation flags for fortran compiler
 #
 F77FLAGS=$(FFLAGS) -O0 -fpp -gline -C -I$(NETCDF_PREFIX)/include
-F77FLAGS=$(FFLAGS) -fpp -I$(NETCDF_PREFIX)/include
+F77FLAGS=$(FFLAGS) -fpp -I$(NETCDF_PREFIX)/include 
 # for SLAP
 GLIMMERFLAGS=-dusty
 #
 # final stage loader flags
 #
-LD_FLAGS=-L$(NETCDF_PREFIX)/lib $(NETCDF_LIB)
+LD_FLAGS=$(BLASLIB) -L$(NETCDF_PREFIX)/lib $(NETCDF_LIB) 
 #
 # locations of wishx and xqplot.tcl
 # they are in fact just empty files
