@@ -1,4 +1,4 @@
 all:	
-install:	generate_ncvars.py f90_dependencies.py
+install:	generate_ncvars.py f90_dependencies.py glimmer_profile.py
 	install -d $(GLIMMER_PREFIX)/bin
 	install $^ $(GLIMMER_PREFIX)/bin
